# gitlog-stat

./: .gitignore  .pdm.toml  LICENSE  README.md  gitlogstat.json  pyproject.toml  setup.cfg  setup.py
src/gitlog_stat/: config.py  statistic.py
src/gitlog_stat/ingestor/: block.py  employee.py  ingestor.py  log_entry.py  name_mapper.py
src/gitlog_stat/reports/: all_commit_by_day.py  all_commit_by_time.py  commit_by_day.py  commit_by_time.py  commit_by_week.py  commit_by_week_by_customer.py  report_base.py  standard.py
